// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.peer-budget.acceptance given: [journey] peer review budget exhaustion and extension when: [t0] artifact created and pass attempted with failed reviews then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: mock-reviewer (l1, 1/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i001.8739656801d5e77f22.r001._.given.by_peer.mock-reviewer.md
   │   └─ taken: .reviews/peer/1.execute._.review.i001.8739656801d5e77f22.r001._.taken.by_self.mock-reviewer.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   └─ r1: mock-reviewer (l1, 1/2)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.execute._.review.i001.8739656801d5e77f22.r001._.given.by_peer.mock-reviewer.md
      │       └─ taken: .reviews/peer/1.execute._.review.i001.8739656801d5e77f22.r001._.taken.by_self.mock-reviewer.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget.acceptance given: [journey] peer review budget exhaustion and extension when: [t1] second pass attempt (budget at limit) then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: mock-reviewer (l1, 2/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.mock-reviewer.md
   │   └─ taken: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.mock-reviewer.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   └─ r1: mock-reviewer (l1, 2/2)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.mock-reviewer.md
      │       └─ taken: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.mock-reviewer.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget.acceptance given: [journey] peer review budget exhaustion and extension when: [t2] third pass attempt (review SKIPPED, exhausted) then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: mock-reviewer (l1, 2/2)
   │   ├─ exhausted 🌙, cached
   │   ├─ terminal — does not block higher levels
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.mock-reviewer.md
   │   └─ taken: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.mock-reviewer.md
   │
   └─ halted: peer reviewer budget exhausted

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = peer reviewer budget exhausted: mock-reviewer
   ├─ options
   │  ├─ increase budget
   │  │  └─ rhx route.guard.budget --for review --add N --peer mock-reviewer --stone 1.execute
   │  └─ approve as-is
   │     └─ rhx route.stone.set --stone 1.execute --as approved
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      └─ reviews
          └─ r1: mock-reviewer (l1, 2/2)
              ├─ exhausted 🌙, cached
              ├─ terminal — does not block higher levels
              ├─ 1 blocker 🔴
              ├─ 0 nitpicks ✓
              ├─ given: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.mock-reviewer.md
              └─ taken: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.mock-reviewer.md
"
`;

exports[`driver.route.peer-budget.acceptance given: [journey] peer review budget exhaustion and extension when: [t3] budget is extended via route.guard.budget then: stdout has good vibes 1`] = `
"
🦉 budget extended

🗿 route.guard.budget
   ├─ route = .
   ├─ add = 2
   ├─ peer = mock-reviewer
   └─ updates
      └─ mock-reviewer: 2 → 4

"
`;

exports[`driver.route.peer-budget.acceptance given: [journey] peer review budget exhaustion and extension when: [t4] pass attempted after budget extension with passed reviews then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: mock-reviewer (l1, 3/4)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i003.8f7cfd245244bc91e6.r001._.given.by_peer.mock-reviewer.md
   │   └─ taken: .reviews/peer/1.execute._.review.i003.8f7cfd245244bc91e6.r001._.taken.by_self.mock-reviewer.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ src/**/*.ts
   │  ├─ reviews
   │  │   └─ r1: mock-reviewer (l1, 3/4)
   │  │       ├─ approved [TIME]
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       ├─ given: .reviews/peer/1.execute._.review.i003.8f7cfd245244bc91e6.r001._.given.by_peer.mock-reviewer.md
   │  │       └─ taken: .reviews/peer/1.execute._.review.i003.8f7cfd245244bc91e6.r001._.taken.by_self.mock-reviewer.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.peer-budget.acceptance given: [journey] peer review budget exhaustion and extension when: [t5] pass re-attempted (cached review, same artifact hash) then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: mock-reviewer (l1, 3/4)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i003.8f7cfd245244bc91e6.r001._.given.by_peer.mock-reviewer.md
   │   └─ taken: .reviews/peer/1.execute._.review.i003.8f7cfd245244bc91e6.r001._.taken.by_self.mock-reviewer.md
   │
   └─ ✓ judge.1 - allowed (cached)

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ src/**/*.ts
   │  ├─ reviews
   │  │   └─ r1: mock-reviewer (l1, 3/4)
   │  │       ├─ approved, cached
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       ├─ given: .reviews/peer/1.execute._.review.i003.8f7cfd245244bc91e6.r001._.given.by_peer.mock-reviewer.md
   │  │       └─ taken: .reviews/peer/1.execute._.review.i003.8f7cfd245244bc91e6.r001._.taken.by_self.mock-reviewer.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
   │          └─ · cached
   │             └─ on src/**/*.ts
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;
